# FastAPI

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: fab9f4af3ec9_create_phone_number_column_for_user_.py
app/: main.py
app/api/: admin.py  auth.py  todo.py  user.py
app/core/: config.py
app/db/: session.py
app/models/: auths.py  todos.py
app/schemas/: Todo.py  UserAuth.py
app/static/js/: base.js
app/templates/: _layout.html  _navbar.html  add-todo.html  edit-todo.html  home.html  login.html  register.html  todo.html
app/tests/: conftest.py  test_admin.py  test_auth.py  test_example.py  test_main.py  test_todo.py  test_users.py
